--- a/home_working_data_procesing_week_4.Rmd
+++ b/home_working_data_procesing_week_4.Rmd
@@ -1,9 +1,10 @@
 ---
-title: "RepreducibleResearch - Week 4"
+title: "Reproducible Research - Week 4"
 author: "Me"
 date: "12 05 2020"
-output: html_document
-
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 
@@ -12,47 +13,49 @@ output: html_document
 1. Load packages and read storm data
 
  ```{r, message = FALSE, warning = FALSE}
-pacman::p_load(tidyverse,lubridate)
+pacman::p_load(tidyverse, gghighlight)
 df <- readr::read_csv("repdata_data_StormData.csv.bz2")
 ```
 
-2. Sum total number of fatalities by event type.  Note that we aggregate event types with small number of fatalities.
+2. Sum total number of fatalities by event type.  Note that we aggregate event types with small number of fatalities into Other.
 
  ```{r, echo = TRUE, warning = FALSE}
 
 df1 <- df %>% select(EVTYPE, FATALITIES, INJURIES) 
 
-df_dead <- df1 %>% 
+df_dead <- df1 %>% drop_na(FATALITIES) %>%
     group_by(EVTYPE) %>%
     summarise(total = sum(FATALITIES)) %>% 
     mutate(dead_or_injured = "dead") %>% 
     filter(total > 0)
 
 df_dead_small <- df_dead %>% 
-    filter(total < quantile(total, 0.75)) %>% 
+    filter(total < quantile(total, 0.95)) %>% 
     summarise(EVTYPE = "other" ,total = sum(total), dead_or_injured = "dead")
 
-df_dead_large <-  df_dead %>% filter(total >= quantile(total, 0.75))
+df_dead_large <-  df_dead %>% filter(total >= quantile(total, 0.95))
 ```  
 
-2. Sum total number of injured by event type.  Again we aggregate event types with small number of injuries.
+3. Sum total number of injured by event type.  Again we aggregate event types with small number of injuries.
 
  ```{r, echo = TRUE, warning = FALSE}
 
     
-df_injured <- df1 %>% 
+df_injured <- df1 %>% drop_na(INJURIES) %>%
     group_by(EVTYPE) %>%
     summarise(total = sum(INJURIES)) %>% 
     mutate(dead_or_injured = "injured") %>% 
     filter(total > 0)
 
 df_injured_small <- df_injured %>% 
-    filter(total < quantile(total, 0.75)) %>% 
+    filter(total < quantile(total, 0.95)) %>% 
     summarise(EVTYPE = "other" ,total = sum(total), dead_or_injured = "injured")
 
-df_injured_large <-  df_injured %>% filter(total >= quantile(total, 0.75))
+df_injured_large <-  df_injured %>% filter(total >= quantile(total, 0.95))
+```
 
-
+4. Combine fatalities and injuries
+ ```{r, echo = TRUE, warning = FALSE}
 
 df2 <- rbind(df_dead_small, df_dead_large, df_injured_small, df_injured_large)
 
@@ -60,16 +63,67 @@ df2 <- rbind(df_dead_small, df_dead_large, df_injured_small, df_injured_large)
 df2$EVTYPE <- factor(df2$EVTYPE , levels = unique(df2$EVTYPE))
 ```
 
+5. Repeat the above for property and crop damages. 
+ ```{r, echo = TRUE, warning = FALSE}
+
+df3 <- df %>% select(EVTYPE, PROPDMG, PROPDMGEXP, CROPDMG, CROPDMGEXP) 
+
+df3 <- df3 %>%  mutate(exp_1 = case_when( PROPDMGEXP == "B" ~ 1e9, 
+                                          PROPDMGEXP == "M" ~ 1e6, 
+                                          PROPDMGEXP == "K" ~ 1e3,
+                                          TRUE ~ 1), 
+                       property_damage = PROPDMG * exp_1,
+                       exp_2 = case_when( CROPDMGEXP == "B" ~ 1e9, 
+                                          CROPDMGEXP == "M" ~ 1e6, 
+                                          CROPDMGEXP == "K" ~ 1e3,
+                                          TRUE ~ 1), 
+                       crop_damage = CROPDMG * exp_2) 
+
+
+df_property <- df3 %>% group_by(EVTYPE) %>%
+  summarise(total = sum(property_damage)) %>% 
+  mutate(property_or_crop = "property damage") %>% filter(total > 0)
+
+df_crop <- df3 %>% group_by(EVTYPE) %>%
+  summarise(total = sum(crop_damage)) %>% 
+  mutate(property_or_crop = "crop damage") %>% filter(total > 0)
+
+df_property_small <- df_property %>% 
+    filter(total < quantile(total, 0.95)) %>% 
+    summarise(EVTYPE = "other" ,total = sum(total), property_or_crop = "property damage")
+
+df_property_large <-  df_property %>% filter(total >= quantile(total, 0.95))
+
+df_crop_small <- df_crop %>% 
+    filter(total < quantile(total, 0.95)) %>% 
+    summarise(EVTYPE = "other" ,total = sum(total), property_or_crop = "crop damage")
+
+df_crop_large <-  df_crop %>% filter(total >= quantile(total, 0.95))
+ 
+df4 <- rbind(df_property_large, df_property_small, df_crop_large, df_crop_small)   
+```
+
+
 ## Results
 
-The graph below clearly shows that tornado is the most leathal storm type in the us between 1950 and 2011.  
+The graph below clearly shows that tornadoes were the most leathal storm type between 1950 and 2011.  
  
  ```{r, message = FALSE, warning = FALSE}
  
-ggplot(df2)+geom_col(aes(x=EVTYPE, y=total, fill= dead_or_injured), width = 2)+
+ggplot(df2)+geom_col(aes(x = EVTYPE, y = total, fill = dead_or_injured), width = 2)+
         coord_cartesian(ylim = c(0, 100), xlim = c(0, 1500))+
-        coord_flip()
+        coord_flip() +
+        gghighlight((EVTYPE == "Other"))
 
+```
+
+Floods caused the most damage.  
+ 
+ ```{r, message = FALSE, warning = FALSE}
+ggplot(df4)+geom_col(aes(x=EVTYPE, y=total, fill= property_or_crop), width = 2)+
+        coord_cartesian(ylim = c(0, 100), xlim = c(0, 1500))+
+        coord_flip() +
+        gghighlight((EVTYPE == "Other"))
 
 ```
 
