--- a/home_working_data_procesing_week_4.Rmd
+++ b/home_working_data_procesing_week_4.Rmd
@@ -2,8 +2,9 @@
 title: "RepreducibleResearch - Week 4"
 author: "Me"
 date: "12 05 2020"
-output: html_document
-
+output:
+  html_document: default
+  pdf_document: default
 ---
 
 
